[package]
name = "ml_pytorch_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
crate-type = ["lib", "cdylib"]


[dependencies]
image = { version = "0.23.14", default-features = false, features = ["gif", "jpeg", "ico", "png", "pnm", "tga", "tiff", "webp", "bmp", "hdr", "dxt", "dds", "farbfeld"]  }
wasi-nn = { version = "0.6.0" }
wasmedge-bindgen = "0.4.1"
wasmedge-bindgen-macro = "0.4.1"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"